--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdIL5_luBm7gTCyce7uHoFktwRvsTyy08x_IVDopQPVtavy5SmRRyvyyAeTf0Sz8vSIIU&usqp=CAU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bateria a domicilio RG</title>
   </head>
