--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdIL5_luBm7gTCyce7uHoFktwRvsTyy08x_IVDopQPVtavy5SmRRyvyyAeTf0Sz8vSIIU&usqp=CAU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bateria a domicilio RG</title>
+    <title>Bateria a domicilio RG GIT</title>
   </head>
   <body>
     <div id="root"></div>
